# sympoly-assignment

./: .dockerignore  .gitignore  Assignment.md  DockerFile  Makefile  Mercury-EXRF.md  README.md  database.py  docker-compose-db-only.yml  docker-compose.yml  example.env  main.py  pyproject.toml  sample.json  schemas.py  shemas.py  temp.py  test.txt
exrf/: __init__.py  exrf.py
exrf_examples/: 03WPsUeTU3fW.exrf  2SLbg5ssKjME.exrf  3J1Lc7pnztWZ.exrf  8TYCNHmc6m9O.exrf  DVcs8wdTmzIR.exrf  QI1CUZYnC3HD.exrf  SyuDX6i6FelK.exrf  THLmydxP08gk.exrf  YAREao2QAz3n.exrf  bEJz0bTqw4WG.exrf  i5vTdttITaC3.exrf  l0xkn9b3dzLI.exrf  nbRPxE4HIsuD.exrf  r8kRvV01Gf20.exrf  tkaeDhghpvvp.exrf  wS9UOciEKnDf.exrf  wocFOtBnLvi5.exrf  yfiUdP9rV8fL.exrf
features/: api.feature
models/: invoceResponceModel.py  invoiceModel.py  invoiceModelDetailed.py
routes/: __init__.py  invoices.py
taskDocs/: EXRF-Specs.md  Mercury-EXRF.md
taskDocs/exrf_examples/: 04mgJYf7lfp8.exrf  0zZw5Uas9Pkp.exrf  3ZY3R1VHyO2j.exrf  4g0FirNgLwmv.exrf  8TYCNHmc6m9O.exrf  8ykyvr5y1pJr.exrf  901uD9EL6KX1.exrf  Dv4BlvEtXkzm.exrf  H33BRlMmwZV3.exrf  HnppVKLA3NUf.exrf  LCwLv72x3oiP.exrf  MHrFaydw9Zh7.exrf  R3DmDzQpDZkt.exrf  ZYPSSCcFhsen.exrf  atTMQaQulLYW.exrf  cIZkVpViMxc3.exrf  hTWaQY6Ah3kw.exrf  lH2JZt9mGDAs.exrf  lQNym4hJfTHr.exrf  pCxReOn9BrR0.exrf  rjb507BPXtvZ.exrf  t1FyZ9PZ7EpR.exrf  test.exrf  testBadData.exrf  yLYrMOPuBG5h.exrf
tests/: test_api.py  test_exrf.py
