[tool.poetry]
name = "sympoly-assignment"
version = "0.1.0"
description = ""
authors = ["danieldagot <51596364+danieldagot@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
