[tool.poetry]
name = "sympoly-assignment"
version = "0.1.0"
description = ""
authors = ["danieldagot <51596364+danieldagot@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
pytest = "^8.0.0"
email-validator = "^2.1.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
