[tool.poetry]
name = "sympoly-assignment"
version = "0.1.0"
description = ""
authors = ["danieldagot <51596364+danieldagot@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
pytest = "^8.0.0"
email-validator = "^2.1.0.post1"
motor = "^3.3.2"
beanie = "^1.25.0"
python-multipart = "^0.0.9"
multipart = "^0.2.4"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

